@@ -41,17 +41,6 @@ public final class Lucene40RWCodec extends Lucene40Codec {
     }
   };
   
-  private final SegmentInfoFormat infosFormat = new Lucene40SegmentInfoFormat() {
-    @Override
-    public org.apache.lucene.codecs.SegmentInfoWriter getSegmentInfoWriter() {
-      if (!LuceneTestCase.OLD_FORMAT_IMPERSONATION_IS_ACTIVE) {
-        return super.getSegmentInfoWriter();
-      } else {
-        return new Lucene40SegmentInfoWriter();
-      }
-    }
-  };
-
   private final DocValuesFormat docValues = new Lucene40RWDocValuesFormat();
   private final NormsFormat norms = new Lucene40RWNormsFormat();
   
@@ -68,11 +57,6 @@ public final class Lucene40RWCodec extends Lucene40Codec {
   @Override
   public NormsFormat normsFormat() {
     return norms;
-  }
-  
-  @Override
-  public SegmentInfoFormat segmentInfoFormat() {
-    return infosFormat;
   }
   
 }
